Basic Javascript functionality

--- a/index.html
+++ b/index.html
@@ -2,9 +2,18 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Page Title</title>
+  <title>Page Title</title>  
+  <script src="javascript.js" defer></script>
 </head>
 <body>
-  <script src="javascript.js"></script>
+  <p id="player-choice"></p>
+  <p id="computer-choice"></p>
+  <div class="display"></div>
+
+  <p id="player-score">Player: </p>
+  <p id="computer-score">Computer: </p>
+  <button id="Rock">Rock</button>
+  <button id="Paper">Paper</button>
+  <button id="Scissors">Scissors</button>
 </body>
 </html>
